force-app/main/default/objects/Alias_Member__c/Alias_Member__c.object-meta.xml
<CustomObject>
    <description>Junction object of Alias and Account</description>
    <label>Alias Member</label>
    <nameField>
        <displayFormat>AM-{0000000}</displayFormat>
        <label>AliasMember Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alias Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>