force-app/main/default/objects/Alias_Member__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <label>Alias</label>
    <referenceTo>Alias__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Alias_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>